# ForDil

./: .gitignore  README.md  index.html
app-mobile/: CMakeLists.txt  ChapterHeader.qml  CloseButton.qml  Components.qml  CustomPopup.qml  DialogWindow.qml  Globals.qml  IconTextButton.qml  LogWindow.qml  MapView.qml  PageAbout.qml  PageAdvancedResults.qml  PageDiscoveryPart.qml  PageGlobalResults.qml  PageHome.qml  PageHotspots.qml  PageMain.qml  PageMarteloscope.qml  PageSettings.qml  PageSiteDiscovery.qml  PageSiteMarteloscope.qml  PageSiteTravailloscope.qml  PageTravailloscope.qml  PageValuation.qml  SiteSelection.qml  TextButton.qml  ZoomableView.qml  c_backend.cpp  c_backend.h  c_main.cpp  qmldir  resources.qrc
app-mobile/android/: AndroidManifest.xml  build.gradle  proguard-rules.pro
app-mobile/android/res/values/: strings.xml
app-mobile/android/src/com/mendelu/fordil/: MainActivity.java
backend/: c_chart.cpp  c_chart.h  c_data.cpp  c_data.h  c_mappainter.cpp  c_mappainter.h  c_pdf.cpp  c_pdf.h  c_result.cpp  c_result.h  c_type.cpp  c_type.h
data/: Marteloscope_Klepacov_CZ.xlsx  Marteloscope_Lauzelle_BE.xlsx  Marteloscope_Mormal_FR.xlsx  Marteloscope_Pokojna_CZ.xlsx  Travailloscope_Lauzelle_BE.xlsx  Travailloscope_Mormal_FR.xlsx  Travailloscope_Pokojna_CZ.xlsx
tests/: CMakeLists.txt  main.cpp  test.h
translations/: translation_cs.ts  translation_en.ts  translation_fr.ts
